--- a/backend/nginx/default.conf
+++ b/backend/nginx/default.conf
@@ -13,15 +13,17 @@ server {
     ssl_certificate      /etc/nginx/keys/server.crt;
     ssl_certificate_key  /etc/nginx/keys/server.key;
     
-    location /auth/ {
-        proxy_pass  http://auth_Server:3000/;
+    client_max_body_size 10M;
+
+    location /app/ {
+        proxy_pass http://app:3001/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 
-    location /app/ {
-        proxy_pass http://app:3001/;
+    location /auth/ {
+        proxy_pass http://auth:3000/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
