--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 /frontend/node_modules
 
 /backend/nginx/keys/*
+backend/app/src/test.db
+/backend/app/src/assets/UserIcons/*
+!/backend/app/src/assets/UserIcons/default.png
