--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,8 @@
     "test": "test"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "npx tailwindcss -i  ./src/main/resources/static/input.css -o ./src/main/resources/static/user/output.css --watch"
   },
   "keywords": [],
   "author": "",
